anna pushing edits from 7/23

--- a/Appendices/Health.tex
+++ b/Appendices/Health.tex
@@ -1,6 +1,6 @@
 \section{Forecasting Health Outcomes Using the Future Adult Model (FAM)} \label{appendix:health}
 
-In this paper, we also forecast and monetize health outcomes for treatment and control individuals. When studying labor income, a first-order autoregressive model suffices to make valid forecasts. When forecasting health, a richer model conditioning on multiple health conditions is required to make valid forecasts. We use a dynamic microsimulation model (the Future Adult Model - FAM) as a vehicle for forecasting health-state occupancy probabilities and associated benefits and costs. Using this tool, we forecast the health trajectories of the ABC/CARE individuals. To forecast health, we use a comprehensive ABC/CARE age-30 health interview and a health follow-up conducted when the subjects were in their mid-30s to initialize the forecast of their health trajectories. We then monetize health outcomes using quality-adjusted life years and medical costs.\footnote{The  microsimulation model that we use is an extension of the model used by \citet{Prados_etal_2015_How-Much-Can-Education}. Technical details are described in \citet{Goldman_etal_2015_Future-Adult-Model}. Both models are related to the Future Elderly Model (FEM), which is a microsimulation tool originally developed to examine the health and health care costs among the elderly Medicare population \citep{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}. It has been used extensively to assess health and disease prevention scenarios: FEM has been used to assess the future costs of disease, the benefits of preventing disease among older population, the consequences of new medical technologies, trends in disability, and the fiscal consequences of worsening population health (see \citet{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}, \citet{Lakdawalla_etal_2004_Health-and-Cost}, \citet{Goldman_etal_2005_HA}, and \citet{Zissimopoulos_etal_2014_Delaying-Alzheimers}). The main differences of FAM with FEM are that the model we use starts with cohorts of individuals at age 30 instead of 50, and that it simulates more outcomes than FEM. These additional outcomes are useful in explaining health outcomes and medical expenditure at younger ages. For example, we analyze the evolution of partnership and marital status, work status, and family size.} Before providing formal details, we summarize the data sets used, as well as variable construction and imputation assumptions. 
+In this paper, we also forecast and monetize health outcomes for treatments and controls. When studying labor income, a first-order autoregressive model suffices to make valid forecasts. When forecasting health, a richer model conditioning on multiple health conditions is required to make valid forecasts. We use a dynamic microsimulation model (the Future Adult Model - FAM) as a vehicle for forecasting health-state occupancy probabilities and associated benefits and costs. Using this tool, we forecast the health trajectories of the ABC/CARE individuals. To forecast health, we use a comprehensive ABC/CARE age-30 health interview and a health follow-up conducted when the subjects were in their mid-30s to initialize the forecast of their health trajectories. We then monetize health outcomes using quality-adjusted life years and medical costs.\footnote{The  microsimulation model that we use is an extension of the model used by \citet{Prados_etal_2015_How-Much-Can-Education}. Technical details are described in \citet{Goldman_etal_2015_Future-Adult-Model}. Both models are related to the Future Elderly Model (FEM), which is a microsimulation tool originally developed to examine the health and health care costs among the elderly Medicare population \citep{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}. It has been used extensively to assess health and disease prevention scenarios: FEM has been used to assess the future costs of disease, the benefits of preventing disease among older population, the consequences of new medical technologies, trends in disability, and the fiscal consequences of worsening population health (see \citet{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}, \citet{Lakdawalla_etal_2004_Health-and-Cost}, \citet{Goldman_etal_2005_HA}, and \citet{Zissimopoulos_etal_2014_Delaying-Alzheimers}). The main differences of FAM with FEM are that the model we use starts with cohorts of individuals at age 30 instead of 50, and that it simulates more outcomes than FEM. These additional outcomes are useful in explaining health outcomes and medical expenditure at younger ages. For example, we analyze the evolution of partnership and marital status, work status, and family size.} Before providing formal details, we summarize the data sets used, as well as variable construction and imputation assumptions.
 
 \input{Appendices/Health/data.tex}
-\input{Appendices/Health/method_analysis.tex}
+\input{Appendices/Health/method_analysis.tex} 
