--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -73,7 +73,7 @@ University of Southern California}
 
 \noindent \textbf{Editor. pg.\ 15 seems to describe a key component of your analysis. You seek to compare, say, whether labor income is different between treated and non- treated, and since you cannot observe that for the people in your sample, you use a synthetic sample for prediction. Fine. But then the key surely is to get the difference between these two groups correctly, i.e., that the two synthetic groups of the auxiliary sample differ by ideally exactly as much as they would if we were to follow the original two groups. pg.\ 15 talks much about predicting future incomes, but we don't care much about the level itself: we care much more about the difference between these two groups. There is little said to assure the reader that one gets the right answer for that difference.}
 
-\noindent \textit{Response.} That is correct. One would get valid forecasts from accurate predictions of the treatment-control difference. That is all we need. We rely on stronger conditions predicting levels for each of the treatment and the control groups. They provide additional testable implications---Equations~\eqref{eq:suff1} and~\eqref{eq:suff2}---which we satisfy (i.e., we do not reject the null). However, we also discuss the minimal conditions required to accurately forecast life-cycle mean differences.
+\noindent \textit{Response.} That is correct. One would get valid forecasts from accurate predictions of the treatment-control difference. That is all we need. We rely on stronger conditions predicting levels for each of the treatment and control groups. They provide additional testable implications---Equations~\eqref{eq:suff1} and~\eqref{eq:suff2}---which we satisfy (i.e., we do not reject the null). However, we also discuss the minimal conditions required to accurately forecast life-cycle mean differences.
 
 \noindent \textbf{The background variables will be the same for the treated and untreated, for example. So how, exactly, does the difference in treatment show up in the synthetic groups?  Just the development of labor income until the observable age? That might be fine, but then clearly say so. Something else?}
 
@@ -94,7 +94,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor. A key concern that I do not see discussed early on and with great care is that ``different times are different''. Suppose, say, that Y contains labor income, measured in year-2000 dollars. Suppose I wanted to use your methodology to also say something about great-great-grandkids, and therefore tried to find a matching sample of people, where I have data for their next four generations. I probably would have to go back more than 100 years. But then someone with the labor income of a contemporary lower middle class person would be considered filthy rich back then! They surely wouldn't be comparable! The issue may be less pronounced here, since the difference in birth year is perhaps just 20 or 30 years (how much, actually?), but still. You might be able to finesse this by just looking at income growth rates (since, once again, we are ultimately only interested in the difference between the treated and the non-treated groups). But still, one might need to worry about ``macro developments'' here. Crime rates may have changed. Female labor force participation, divorce rates, unemployment rates: they all changed. Perhaps, the identifying assumption here is that these affected the treated and non-treated groups the same, so that these macro effects disappear, once differencing or so. But shouldn't that be clearly spelled out and clearly argued? You ``hide'' all that with ``Condition C-1'', but as I just described with my great-great- grandkids example, this can be a pretty ridiculous condition for certain lists of outcomes. The selection of outcomes (e.g.: level of income or growth of income or income relative to the average U.S. income?) is really key! Don't hide that behind too much formalism, discuss this clearly and upfront. At this point, it is hard to be convinced that what you do is legit.}
 
-\noindent \textit{Response.} Your very important concern boils down to a concern about``cohort effects.'' As noted previously, we expressed this in an admittedly obscure way. Note that actually all we need is for the structural relationships to display a ``no cohort effects'' property. What we require is for the mapping between predictors and outcomes to be constant across children, parents, and grand-children, once we control for ($\bm{Fix}$) background variables. We elaborate on this in Remark~\ref{remark:cohort} after stating Assumption~\ref{ass:summary}. This assumption leads to testable implications which we test and do not reject. Parenthetically, fixing and conditioning come to the same thing under exogeneity and support conditions. 
+\noindent \textit{Response.} Your very important concern boils down to a concern about``cohort effects.'' As noted previously, we expressed this in an admittedly obscure way. Note that actually all we need is for the structural relationships to display a ``no cohort effects'' property. What we require is for the mapping between predictors and outcomes to be constant across children, parents, and grand-children, once we control for ($\bm{Fix}$) background variables. We elaborate on this in Remark~\ref{remark:cohort} after stating Assumption~\ref{ass:summary}. This assumption leads to testable implications which we test and do not reject. Parenthetically, fixing and conditioning come to the same thing under exogeneity and support conditions.
 
 \noindent \textbf{Editor. Is it really true that you can get by with (6)? If you want to match individual-by-individual (as described in my main comment 4 above), might we want to condition also on outcomes up to age a*? Perhaps I am misunderstanding that condition, since you also state something about X potentially containing lagged variables. You weren't all that clear on this before (see p. 19, top), and this now comes back to haunt me in understanding what it is you do. This needs clarification.}
 
@@ -269,7 +269,7 @@ same (if possible: is it? Comment on that!).}
  
 \noindent \textbf{If the paper is supposed to be a template, what should the researcher do if she rejects a given assumption, such as exogeneity or structural invariance? This seems like a likely event given the strong assumptions. Is it possible to make progress under alternative or weaker assumptions?}
 
-\noindent \textit{Response.} Yes, it is possible to proceed under weaker assumptions, if the only object to forecast is the mean difference between the treatment and control. This weaker condition is provided in Equation~\eqref{eq:nec}. We note, however, that the stronger assumptions we invoke give us sharper testable implications. Mean independence in levels separately for treatments and controls allows us to derive the implications in Equations~\eqref{eq:suff1} and~\eqref{eq:suff2} and provide the tests in Figures~\ref{figure:controltests} and~\ref{fig:labor-income-profiles}. This would not be possible if Equation~\eqref{eq:nec} were the only assumption. We are now careful in our exposition and make the important point that failure to reject is not tantamount to the truth of the null---it is just consistent with it.
+\noindent \textit{Response.} Yes, it is possible to proceed under weaker assumptions, if the only object to forecast is the mean difference between the treatment and control. This weaker condition is provided in Equation~\eqref{eq:nec}. We note, however, that the stronger assumptions we invoke give us sharper testable implications. Mean independence in levels separately for treatments and controls allows us to derive the implications in Equations~\eqref{eq:suff1} and~\eqref{eq:suff2} and provide the tests in Figures~\ref{figure:controltests} and~\ref{fig:labor-income-profiles}. This would not be possible if Equation~\eqref{eq:nec} were the only assumption. We are now more careful in our exposition and make the important point that failure to reject is not tantamount to the truth of the null---it is just consistent with it.
 
 \noindent \textbf{In the body of the paper, the authors consistently argue that they test and do not reject the assumptions they make. Looking at the appendices, this seems to be true in many but not all cases. Also, in some of the cases it is true, the sampling error is significant and one cannot say much about the testable implications. The authors should be clear about this.}
 
