--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -183,7 +183,7 @@ Assumption~\ref{ass:summary} has two distinct aspects that can be resolved furth
 \end{remark}
 
 \begin{remark} \label{remark:cohort} \textbf{Accounting for Cohort Effects}
-A second aspect of Assumption~\ref{ass:summary}, that the structural relationships and distributions are identical in the experimental and non-experimental samples, embeds an implicit assumption about the absence of cohort effects in the post-treatment forecasted sample. In particular, a structural function $\bm{\phi}_{n,a}^d \left( \bm{x}, \bm{b} \right)$ or distribution $F^d_{n,a} \left(\bm{z} | \text{ \text{\textbf{Fix}} } \bm{\Omega} = \bm{\omega}\right)$, which we identify and estimate in the non-experimental sample with subjects who are older than those in the experimental sample, is a valid tool for forecasting the experimental sample at older ages currently out of the age range of the experiment. Note that this does not mean that there are no cohort effects in the outcome of interest, $\bm{Y}^d_{k,a}$. Instead, it means that there are no cohort effects in the \textbf{mapping} between $\bm{X}_{k,a}, \bm{B}_k$ and $\bm{Y}_{k,a}^d$, $k \in \{e,n\}$.
+A second aspect of Assumption~\ref{ass:summary}, that the structural relationships and distributions are identical in the experimental and non-experimental samples, embeds an implicit assumption about the absence of cohort effects in the post-sample period for the experimental sample. In particular, a structural function $\bm{\phi}_{n,a}^d \left( \bm{x}, \bm{b} \right)$ or distribution $F^d_{n,a} \left(\bm{z} | \text{ \text{\textbf{Fix}} } \bm{\Omega} = \bm{\omega}\right)$, which we identify and estimate in the non-experimental sample with subjects who are older than those in the experimental sample, is a valid tool for forecasting the experimental sample at older ages currently out of the age range of the experiment. Note that this does not mean that there are no cohort effects in the outcome of interest, $\bm{Y}^d_{k,a}$. Instead, it means that there are no cohort effects in the \textbf{mapping} between $\bm{X}_{k,a}, \bm{B}_k$ and $\bm{Y}_{k,a}^d$, $k \in \{e,n\}$.
 \end{remark}
 
 \doublespacing
