anna pushing preamble files

--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -77,7 +77,7 @@ University of Southern California}
 
 \noindent \textbf{The background variables will be the same for the treated and untreated, for example. So how, exactly, does the difference in treatment show up in the synthetic groups?  Just the development of labor income until the observable age? That might be fine, but then clearly say so. Something else?}
 
-\noindent \textit{Response.} It shows up because there are two \text{different} types of predictors: (i) $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment. The key assumption for obtaining our forecasts is that $\bm{X}_{k,a}^d$ generates the treatment effect that the program has on $\bm{Y}_{k,a}^d$ through the invariant production functions. Any treatment-control differences in the outcomes of interest arise from a treatment-control difference in $\bm{X}_{k,a}$ (operating through function $\bm{\phi}$). These points are now clearly discussed in the list of steps in Section~\ref{section:cbamethodology}.
+\noindent \textit{Response.} It shows up because there are two \text{different} types of predictors: (i) $\bm{B}$ are background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment. The key assumption for obtaining our forecasts is that $\bm{X}_{k,a}^d$ generates the treatment effect that the program has on $\bm{Y}_{k,a}^d$ through the invariant production functions. Any treatment-control differences in the outcomes of interest arise from a treatment-control difference in $\bm{X}_{k,a}$ (operating through function $\bm{\phi}$). These points are now clearly discussed in the list of steps in Section~\ref{section:cbamethodology}.
 
 \noindent \textbf{This needs to be a lot clearer and a lot more convincing. You may be resolving this eventually in (3). It is unclear there, however, whether you want all the characteristics of the synthetic group to be the same or just for the one specific j, which you are seeking to forecast in (1). To me, it makes more sense that they are all the
 same (if possible: is it? Comment on that!).}
@@ -86,7 +86,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor. Connected to that: I found assumption Assumption~\ref{ass:summary} on pg.\ 18 mystifying. It may actually be unfortunate that you ``suppress individual i subscripts'' to ``avoid notational clutter'', as you state on p. 16. I thought that the explanation on pg.\ 15 and (3) meant, that you take each individual of your actual sample and ``match him/her'' up with someone in the auxiliary sample, who has the exact same vector of characteristics Y until age a* (which then raises a bunch of questions: what, if there are many in the artificial data that do the trick? What, if there are none?). So, you then would have an auxiliary sample, that looks like your experimental sample, but where you can observe everything until the end of their lives. If that is what you do, then \ref{ass:summary} is not an assumption: it is a definition of the auxiliary sample.}
 
-\noindent \textit{Response.} We have rewritten Section~\ref{section:cbamethodology}. We apologize for the confusing exposition in the previous draft. Our procedure is now discussed in greater detail. We have removed old Assumption~\ref{ass:summary} in the previous version of the paper because it was not necessary. We now note that in our main approach we do not match individual to individual across experimental and non-experimental samples. Instead, we construct a synthetic cohort and estimate structural relationships. What matters is the structural relationships that we are able to identify and estimate in the non-experimental samples, but not the outcomes themselves. For this, Assumption~\ref{ass:summary} was confusing and we have restated all our assumptions in terms of these structural relationships. In a second, non-parametric approach, we match individuals on $\bm{B}_k$ and $\bm{X}^d_{k,a}$, and bypass estimating production functions. Agreement of the estimates from  the two approaches is reassuring.
+\noindent \textit{Response.} We have rewritten Section~\ref{section:cbamethodology}. We apologize for the confusing exposition in the previous draft. Our procedure is now discussed in greater detail. We have removed old Assumption~\ref{ass:summary} in the previous version of the paper because it was not necessary. We now note that in our main approach we do not match individual to individual across experimental and non-experimental samples. Instead, we construct a synthetic cohort and estimate structural relationships. What matters is the structural relationships that we are able to identify and estimate in the non-experimental samples, but not the outcomes themselves. For this, Assumption~\ref{ass:summary} was confusing and we have restated all our assumptions in terms of these structural relationships. In a second, non-parametric approach, we match individuals on $\bm{B}$ and $\bm{X}^d_{k,a}$, and bypass estimating production functions. Agreement of the estimates from  the two approaches is reassuring.
 
 \noindent \textbf{And if that is not the definition, then exactly what is the definition? In any case, assumption A-2 on p.21 states some support condition. It would seem to me that this is a necessary condition to even construct the auxiliary sample, as defined by ``assumption''~\ref{ass:summary}. Perhaps you mean something else, but this should all be crystal clear. Moreover, the selection of variables is really key. Suppose you include cohort information in the regressors in (1): then, assumption A-2 would be impossible to satisfy. There is too much crucial information here, swept under the rug of apparently clean formalism.}
 
@@ -98,7 +98,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor. Is it really true that you can get by with (6)? If you want to match individual-by-individual (as described in my main comment 4 above), might we want to condition also on outcomes up to age a*? Perhaps I am misunderstanding that condition, since you also state something about X potentially containing lagged variables. You weren't all that clear on this before (see p. 19, top), and this now comes back to haunt me in understanding what it is you do. This needs clarification.}
 
-\noindent \textit{Response.} We apologize for this source of confusion. We now clarify this point in the text and in this response. In Equation~\eqref{eq:outcome} we define the relationship between the outcomes of interest $\bm{Y}_{k,a}^d$ and two \text{different} types of predictors: (i) $\bm{B}_k$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call ``outcomes up to age a''). The key assumption for obtaining our forecasts is that the treatment effects are generated by changes in $\bm{X}_{k,a}^d$ through a policy-invariant production function. Recall that in our main analyses we do not match individual-to-individual. Instead, we create $\bm{B}_k$-comparable samples on which we fit production functions. We insert the experimentally-induced changes in $\bm{X}_{k,a}^d$ in the fitted production functions to forecast out of sample treatment effects. These points are now clearly discussed in the list of steps in Section~\ref{section:cbamethodology}. However, we also discuss an explicit matching procedure (using $\bm{B}_k$ and $\bm{X}^d_{k,a}$) as an alternative non-parametric approach that is valid under exogeneity.
+\noindent \textit{Response.} We apologize for this source of confusion. We now clarify this point in the text and in this response. In Equation~\eqref{eq:outcome} we define the relationship between the outcomes of interest $\bm{Y}_{k,a}^d$ and two \text{different} types of predictors: (i) $\bm{B}$ background variables that are not affected by treatment; and (ii) $\bm{X}_{k,a}^d$ which could be affected by treatment (what you call ``outcomes up to age a''). The key assumption for obtaining our forecasts is that the treatment effects are generated by changes in $\bm{X}_{k,a}^d$ through a policy-invariant production function. Recall that in our main analyses we do not match individual-to-individual. Instead, we create $\bm{B}$-comparable samples on which we fit production functions. We insert the experimentally-induced changes in $\bm{X}_{k,a}^d$ in the fitted production functions to forecast out of sample treatment effects. These points are now clearly discussed in the list of steps in Section~\ref{section:cbamethodology}. However, we also discuss an explicit matching procedure (using $\bm{B}$ and $\bm{X}^d_{k,a}$) as an alternative non-parametric approach that is valid under exogeneity.
 
 \noindent \textbf{Editor. Cut figure 2: TMI. This is technical appendix material. Key results ``in print'' only, please.}
 
@@ -167,7 +167,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor.  ``the two stages can be compressed''. Cool. But we don't care whether this can be done: we care only whether you actually do this. Do you? And if so, exactly how? Details should be provided in the technical appendix.}
 
-\noindent \textit{Response.} We more concisely state why would this be useful and what it implies. We show that estimates from  this method are in agreement with estimates from our model-based method. We present results using this alternative in addition to our main model-based method. Instead of following the steps presented in Section~\ref{section:cbamethodology}, an alternative is simply to use matching on $\bm{B}^d_k$ and $\bm{X}_{k,a}$ to form average profiles of treatment-group-alikes and control-group-alikes (and take the respective mean difference between these two groups). This is just non-parametric matching. Doing this gives a useful check on our method because, under exogeneity, it compresses our procedure to a simple and intuitive estimator that relies on many of the same key assumptions as our model-based approach, without directly estimating the technology. Spelling out our method is useful. It is a method that some readers will be familiar with, and will find appealing given the robustness of our results to using it. We discuss it succinctly in the text but in greater detail in Appendix~\ref{appendix:methodology}. Agreement in the estimates from the two methods is a confirmation of exogeneity of $\bm{X}^d_{k,a}$ and the validity of the functional forms used in our model-based approach.
+\noindent \textit{Response.} We more concisely state why would this be useful and what it implies. We show that estimates from  this method are in agreement with estimates from our model-based method. We present results using this alternative in addition to our main model-based method. Instead of following the steps presented in Section~\ref{section:cbamethodology}, an alternative is simply to use matching on $\bm{B}$ and $\bm{X}^d_{k,a}$ to form average profiles of treatment-group-alikes and control-group-alikes (and take the respective mean difference between these two groups). This is just non-parametric matching. Doing this gives a useful check on our method because, under exogeneity, it compresses our procedure to a simple and intuitive estimator that relies on many of the same key assumptions as our model-based approach, without directly estimating the technology. Spelling out our method is useful. It is a method that some readers will be familiar with, and will find appealing given the robustness of our results to using it. We discuss it succinctly in the text but in greater detail in Appendix~\ref{appendix:methodology}. Agreement in the estimates from the two methods is a confirmation of exogeneity of $\bm{X}^d_{k,a}$ and the validity of the functional forms used in our model-based approach.
 
 \noindent \textbf{Editor. pg.\ 16, ``There is close agreement of the constructed profiles within the age group of the experimental sample.'' See my main comment 3: if the constructed profile is obtained per matching the profile within the age group of the experimental sample, isn't this then a tautological statement? The same holds for the next paragraph. I.e., what, precisely, is used for construction, and what is the independent verification here? This is very unclear.}
 
@@ -179,7 +179,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Editor.  pg.\ 24: Assumption A-4 feels a bit odd. The notation is general enough that both d and k could be components of x. If one had a phi, which did not depend on it, then one could construct a new one, which did, switching between the ``old'' values, in dependence on d and k, and proceed with that. Is Theorem 1 then still valid? Perhaps something else is meant.}
 
-\noindent \textit{Response.} We  clarify this point in the paper. It is at the heart of our methodology. What we mean is that outcomes in both the experimental and non-experimental samples can be summarized by $\bm{X}_{k,a}^d$ and $\bm{B}_k$. That is, the realization of an outcome of interest is generated by realizations of $\bm{X}_{k,a}^d$ and $\bm{B}_k$. That is why it is crucial for us to document that treatment operates on $\bm{X}_{k,a}^d$ and that $\bm{\phi} \left( \cdot, \bm{B}_k \right)$ is a non-trivial, policy-invariant function of $\bm{X}_{k,a}^d$, which we show to be empirically true in the analysis of Section~\ref{section:cbamethodology}. If $\bm{X}_{k,a}^d$ and $\bm{B}_k$ are the sole predictors of outcomes, then there is no $d$-specific $\bm{\phi}_{k,j}^d$ for $d=0,1$ and $k = e,n$ but one and only one \textit{invariant} $\phi$ applicable in both the experimental and non-experimental samples. We test and do not reject this hypothesis.
+\noindent \textit{Response.} We  clarify this point in the paper. It is at the heart of our methodology. What we mean is that outcomes in both the experimental and non-experimental samples can be summarized by $\bm{X}_{k,a}^d$ and $\bm{B}$. That is, the realization of an outcome of interest is generated by realizations of $\bm{X}_{k,a}^d$ and $\bm{B}$. That is why it is crucial for us to document that treatment operates on $\bm{X}_{k,a}^d$ and that $\bm{\phi} \left( \cdot, \bm{B} \right)$ is a non-trivial, policy-invariant function of $\bm{X}_{k,a}^d$, which we show to be empirically true in the analysis of Section~\ref{section:cbamethodology}. If $\bm{X}_{k,a}^d$ and $\bm{B}$ are the sole predictors of outcomes, then there is no $d$-specific $\bm{\phi}_{k,j}^d$ for $d=0,1$ and $k = e,n$ but one and only one \textit{invariant} $\phi$ applicable in both the experimental and non-experimental samples. We test and do not reject this hypothesis.
 
 \noindent \textbf{Editor. pg.\ 27: the notes to table 2 contain a model. That really should be part of the main text or appendix (or technical appendix): it feels odd to explain it there.}
 
@@ -281,7 +281,7 @@ same (if possible: is it? Comment on that!).}
 
 \noindent \textbf{Referee 3. How do you choose predictor variables? It needs to be able to predict a treatment effect, and so the predictor variable should be affected by treatment. I might be wrong but it doesn't look like you are using the subsample of predictors that are affected by treatment? Why not? Why does it make sense to include predictor variables not affected by treatment?}
 
-\noindent \textit{Response.} As noted in Section~\ref{section:cbamethodology}, there are predictors not affected by treatment, $\bm{B}_k$, and predictors affected by treatment, $\bm{X}_{k,a}^d$. The former allow us to gain precision when identifying and estimating $\bm{\phi}$ in the auxiliary samples. We choose them to be the set of variables that are available across the two samples available at baseline in the experimental sample. The latter ($\bm{X}_{k,a}^d$) are the most important, as our whole methodology relies on using them as ``mediators'' (inputs) of treatment production functions. That is precisely what is embedded in Assumption~\ref{ass:summary}. As discussed in Section~\ref{section:cbamethodology}, a variable is a predictor variable: (i) if it is available in the experimental and the non-experimental data; (ii) the support in the non- experimental data contains the support in the experimental data; (iii) mediates or causes labor income; and (iv) is affected by treatment. Section~\ref{section:cbamethodology} documents that these hold for the intermediate inputs that we use. Note that the hypothesis of exogeneity is tested and not rejected.
+\noindent \textit{Response.} As noted in Section~\ref{section:cbamethodology}, there are predictors not affected by treatment, $\bm{B}$, and predictors affected by treatment, $\bm{X}_{k,a}^d$. The former allow us to gain precision when identifying and estimating $\bm{\phi}$ in the auxiliary samples. We choose them to be the set of variables that are available across the two samples available at baseline in the experimental sample. The latter ($\bm{X}_{k,a}^d$) are the most important, as our whole methodology relies on using them as ``mediators'' (inputs) of treatment production functions. That is precisely what is embedded in Assumption~\ref{ass:summary}. As discussed in Section~\ref{section:cbamethodology}, a variable is a predictor variable: (i) if it is available in the experimental and the non-experimental data; (ii) the support in the non- experimental data contains the support in the experimental data; (iii) mediates or causes labor income; and (iv) is affected by treatment. Section~\ref{section:cbamethodology} documents that these hold for the intermediate inputs that we use. Note that the hypothesis of exogeneity is tested and not rejected.
 
 \noindent \textbf{Referee 3. What, if any, restrictions are there on the joint distribution of the predicted outcomes in a given period? Are, say, high earners also more likely to be healthy? What are the cross-equation restrictions in the forecasts?}
 
